*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.0 ===

* TODO: write changes here as a dot list.